sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:15: error: ';' expected but '=' found.
				var mem = 0 = j
                                            ^