sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() 
{
	/*var v = 9999
	var mem = 0*/
	
	for(i <- 0 to getNombreValeurs()-1)
	{
		var v = 9999
		
		for(j <- i to getNombreValeurs()-1)
		{
			if(getValeur(j)<v)
			{
				var mem = 0 = j
				v = getValeur(j)
			}
		}

		echange(mem,i)
	}
}
